<resources>
    <string name="app_name">ProtripBook</string>
    <string name="action_settings">Settings</string>
    <string name="car_activity_label">Add new car</string>
    <string name="car_edit_activity_label">Edit car</string>
    <string name="odometer_activity_label">Update odometer</string>
    <string name="trip_activity_label">Add new trip</string>
    <string name="trip_activity_edit_label">Edit trip</string>

    <string name="date_pattern">dd/MM/yyyy</string>

    <string name="pref_cat_title_options">Options</string>
    <string name="pref_cat_key_options" translatable="false">options</string>
    <string name="pref_cat_title_car">Cars</string>
    <string name="pref_cat_key_car" translatable="false">cars</string>
    <string name="pref_cat_title_report">Report</string>
    <string name="pref_cat_key_report" translatable="false">report</string>

    <string name="pref_unit_label">Distance Unit</string>
    <string name="pref_unit_label_km">Kilometers</string>
    <string name="pref_unit_label_mi">Miles</string>
    <string name="pref_unit_key" translatable="false">unit</string>
    <string name="pref_unit_value_km" translatable="false">km</string>
    <string name="pref_unit_value_mi" translatable="false">mi</string>

    <string name="pref_car_add_label">Add new car</string>
    <string name="pref_car_label">Select car</string>
    <string name="pref_car_key" translatable="false">car</string>
    <string name="pref_car_default" translatable="false">-1</string>

    <string name="pref_report_first_odometer_title">Use first odometer date</string>
    <string name="pref_report_first_odometer_key">first_odometer</string>
    <string name="pref_report_first_odometer_default">true</string>
    <string name="pref_report_last_odometer_title">Use last odometer date</string>
    <string name="pref_report_last_odometer_key">last_odometer</string>
    <string name="pref_report_last_odometer_default">true</string>
    <string name="pref_report_odometer_true">true</string>
    <string name="pref_report_button_set">Set</string>
    <string name="pref_report_button_cancel">Cancel</string>
    <string name="pref_report_first_date_key">first_date</string>
    <string name="pref_report_first_date_default">01/01/2018</string>
    <string name="pref_report_first_date_title">First date</string>
    <string name="pref_report_last_date_key">last_date</string>
    <string name="pref_report_last_date_title">Last date</string>
    <string name="pref_report_last_date_default">31/12/2018</string>

    <string name="car_input_hint_name">Car name</string>
    <string name="car_input_hint_brand">Car brand</string>
    <string name="car_input_hint_plate">Car plate</string>
    <string name="car_input_hint_reading">Odometer first reading</string>
    <string name="car_input_hint_date">Odometer first date</string>
    <string name="car_input_error_name">Enter a name for your car</string>
    <string name="car_input_error_brand">Enter the brand of your car</string>
    <string name="car_input_error_plate">Enter the license plate of your car</string>
    <string name="car_input_error_reading">Enter the initial reading of the odometer</string>
    <string name="car_input_error_date">Enter the date of the initial reading</string>
    <string name="car_button_add">Add</string>
    <string name="car_button_update">Update</string>
    <string name="car_button_cancel">Cancel</string>
    <string name="car_button_delete">Delete this car</string>
    <string name="car_confirm">New car added</string>
    <string name="car_edit_confirm">Car updated</string>
    <string name="car_edit_error">Impossible to update car</string>
    <string name="car_confirm_delete_title">Do you want to delete this car?</string>
    <string name="car_confirm_delete_message">All trips and odometer infos will be erased from your phone. This action is not reversible</string>
    <string name="car_confirm_delete_yes">Confirm</string>
    <string name="car_confirm_delete_no">Cancel</string>
    <string name="car_delete_confirm">Car deleted</string>
    <string name="car_delete_error">Impossible to delete car</string>
    <string name="no_car_error">Select a car to display or add a new car</string>

    <string name="car_info_edit_button">Edit</string>
    <string name="car_info_settings_button">Settings</string>
    <string name="car_info_logo_cd">Car Info</string>

    <string name="odometer_edit_button">Update</string>
    <string name="odometer_hint_date">reading date</string>
    <string name="odometer_hint_reading">reading</string>
    <string name="odometer_button_add">Update</string>
    <string name="odometer_button_cancel">Cancel</string>
    <string name="odometer_error_reading">New reading must be higher than the previous one.</string>
    <string name="odometer_error_date">New date must be later than the previous one.</string>
    <string name="odometer_confirm">Odometer updated</string>
    <string name="odometer_error">Impossible to update odometer</string>
    <string name="odometer_title">Odometer</string>
    <string name="odometer_logo_cd">Odometer</string>

    <string name="trip_input_hint_from">From</string>
    <string name="trip_input_hint_to">To</string>
    <string name="trip_input_hint_distance">Distance</string>
    <string name="trip_input_hint_round_true">Round trip</string>
    <string name="trip_input_hint_round_false">Single trip</string>
    <string name="trip_input_hint_date">Trip date</string>
    <string name="trip_button_add">Add</string>
    <string name="trip_button_update">Update</string>
    <string name="trip_button_cancel">Cancel</string>
    <string name="trip_input_error_from">Enter the starting location</string>
    <string name="trip_input_error_to">Enter the destination</string>
    <string name="trip_input_error_distance">Enter the total distance travelled</string>
    <string name="trip_input_error_date">Enter the date of the trip</string>
    <string name="trip_add_confirm">New trip added</string>
    <string name="trip_add_error">Impossible to add trip</string>
    <string name="trip_update_confirm">Trip updated</string>
    <string name="trip_update_error">Impossible to update trip</string>

    <string name="trip_item_edit_button">Edit</string>
    <string name="trip_item_delete_button">Delete</string>
    <string name="trip_switch_button">Switch Locations</string>
    <string name="trip_calculate_button">Calculate distance</string>
    <string name="trip_item_logo_cd">Trip Information</string>
    <string name="trip_item_from">From</string>
    <string name="trip_item_to">To</string>
    <string name="trip_delete_confirm">Trip deleted</string>
    <string name="trip_delete_error">Impossible to delete trip</string>

    <string name="report_logo_title">Report</string>
    <string name="report_from_label">From</string>
    <string name="report_to_label">to</string>
    <string name="report_trip_label">Total trip distance</string>
    <string name="report_odometer_label">Total odometer distance</string>
    <string name="report_ratio_unit">%</string>
    <string name="report_button">Generate report file</string>

    <string name="select_folder">Select a folder</string>
    <string name="select_file">Select file</string>
    <string name="file_created">Created file: %1$s.</string>
    <string name="file_create_error">Error while trying to create the file.</string>

    <string name="report_util_error_pref_date" translatable="false">Error parsing preference dates</string>
    <string name="report_util_error_odometer_cursor" translatable="false">Odometer cursor empty</string>
    <string name="report_util_error_odometer_date" translatable="false">Error parsing odometer date</string>
    <string name="report_util_error_odometer" translatable="false">Error retrieving odometer dates</string>
    <string name="report_util_error_limit_date" translatable="false">Error parsing limit dates</string>
    <string name="report_util_error_trip_cursor" translatable="false">Trip cursor empty</string>
    <string name="report_util_error_trip_date" translatable="false">Error parsing trip dates</string>

    <string name="address_error_service_not_available" translatable="false">Location service not available</string>
    <string name="address_error_invalid_lat_long" translatable="false">Invalid latitude or longitude</string>
    <string name="address_error_no_address_found" translatable="false">Address not found</string>
    <string name="address_info_address_found" translatable="false">Address found</string>
    <string name="address_error_no_geocoder_available">No geocoder available</string>

    <string name="widget_add_button">Add trip</string>

    <string name="distance_imperial" translatable="false">imperial</string>
    <string name="distance_metric" translatable="false">metric</string>
    <string name="distance_ok" translatable="false">OK</string>



</resources>
