<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_cat_title_options"
        android:key="@string/pref_cat_key_options">

        <ListPreference
            android:defaultValue="@string/pref_unit_value_km"
            android:entries="@array/pref_unit_option_labels"
            android:entryValues="@array/pref_unit_option_values"
            android:key="@string/pref_unit_key"
            android:title="@string/pref_unit_label"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_cat_title_car"
        android:key="@string/pref_cat_key_car">

        <ListPreference
            android:key="@string/pref_car_key"
            android:title="@string/pref_car_label" />

        <PreferenceScreen android:title="@string/pref_car_add_label">
            <intent android:action="be.maxgaj.protripbook.CarActivity" />
        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>