<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/card_padding"
        android:paddingRight="@dimen/card_padding"
        android:paddingTop="@dimen/card_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/trip_input_layout_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/trip_input_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/trip_input_hint_from" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/trip_input_layout_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/trip_input_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/trip_input_hint_to" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/trip_input_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginTop="@dimen/switch_margin"
            android:textColor="@color/light_blue_700"
            android:textSize="@dimen/switch_text_size"
            app:switchPadding="@dimen/switch_margin"
            android:layout_gravity="end"
            android:text="@string/trip_input_hint_round_false" />

        <Button
            android:id="@+id/trip_switch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_switch_button"
            android:contentDescription="@string/trip_switch_button"
            android:theme="@style/AppTheme.FlatButton" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/trip_input_layout_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/trip_input_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:hint="@string/trip_input_hint_distance" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/trip_calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trip_calculate_button"
            android:contentDescription="@string/trip_calculate_button"
            android:theme="@style/AppTheme.FlatButton" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/trip_input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/trip_input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="date"
                android:hint="@string/trip_input_hint_date" />
        </android.support.design.widget.TextInputLayout>



        <Button android:id="@+id/trip_btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_button_add"
            android:contentDescription="@string/trip_button_add"
            android:background="@color/colorPrimary"
            android:layout_marginTop="@dimen/button_margin_top"
            android:textColor="@android:color/white"/>

        <Button android:id="@+id/trip_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_button_cancel"
            android:contentDescription="@string/trip_button_cancel"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/button_spacing"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>