<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/card_padding"
        android:paddingRight="@dimen/card_padding"
        android:paddingTop="@dimen/card_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/odometer_layout_reading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/odometer_reading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:hint="@string/odometer_hint_reading"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/odometer_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/odometer_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="date"
                android:hint="@string/odometer_hint_date" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/odometer_btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/odometer_button_add"
            android:background="@color/colorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

        <Button android:id="@+id/odometer_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/odometer_button_cancel"
            android:background="@android:color/white"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>