<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/trip_item_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/card_logo_margin"
        android:layout_marginTop="@dimen/card_logo_margin"
        android:contentDescription="@string/trip_item_logo_cd"
        android:src="@drawable/ic_place_black_40dp" />

    <TextView
        android:id="@+id/trip_item_from_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/trip_item_logo"
        app:layout_constraintTop_toTopOf="@+id/trip_item_logo"
        android:layout_marginStart="@dimen/card_margin_start"
        android:textColor="@color/light_blue_700"
        android:text="@string/trip_item_from"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/trip_item_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/trip_item_from_label"
        app:layout_constraintTop_toTopOf="@+id/trip_item_logo"
        android:layout_marginStart="@dimen/label_space"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/trip_item_to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/trip_item_logo"
        app:layout_constraintBottom_toBottomOf="@+id/trip_item_logo"
        android:layout_marginStart="@dimen/card_margin_start"
        android:textColor="@color/light_blue_700"
        android:text="@string/trip_item_to"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/trip_item_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/trip_item_to_label"
        android:layout_marginStart="@dimen/label_space"
        app:layout_constraintBottom_toBottomOf="@+id/trip_item_logo"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/trip_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_item_logo"
        android:layout_marginStart="@dimen/card_logo_margin"
        android:layout_marginTop="@dimen/line_spacing"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/trip_item_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/trip_item_to_label"
        android:layout_marginStart="@dimen/label_space"
        app:layout_constraintTop_toBottomOf="@+id/trip_item_logo"
        android:layout_marginTop="@dimen/line_spacing"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/trip_item_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/trip_item_unit"
        app:layout_constraintTop_toBottomOf="@+id/trip_item_logo"
        android:layout_marginEnd="@dimen/text_word"
        android:layout_marginTop="@dimen/line_spacing"
        android:textSize="@dimen/title_size" />

    <TextView
        android:id="@+id/trip_item_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_item_logo"
        android:layout_marginEnd="@dimen/card_logo_margin"
        android:layout_marginTop="@dimen/line_spacing"
        android:textSize="@dimen/title_size" />

    <Button
        android:id="@+id/trip_item_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_item_edit_button"
        app:layout_constraintEnd_toStartOf="@+id/trip_item_delete_button"
        android:layout_marginEnd="@dimen/text_word"
        app:layout_constraintTop_toBottomOf="@+id/trip_item_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/trip_item_edit_button"
        android:theme="@style/AppTheme.FlatButton" />

    <Button
        android:id="@+id/trip_item_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_item_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_item_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/trip_item_delete_button"
        android:theme="@style/AppTheme.FlatButton" />

</android.support.constraint.ConstraintLayout>