<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/car_info_data_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/car_info_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/card_logo_margin"
                android:layout_marginTop="@dimen/card_logo_margin"
                android:contentDescription="@string/car_info_logo_cd"
                android:src="@drawable/ic_directions_car_black_24dp" />

            <TextView
                android:id="@+id/car_info_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/car_info_logo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/card_margin_start"
                android:layout_marginTop="@dimen/card_title_margin_top"
                android:textColor="@color/light_blue_700"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/car_info_brand_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/car_info_logo"
                app:layout_constraintBottom_toBottomOf="@+id/car_info_logo"
                android:layout_marginStart="@dimen/card_margin_start"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/car_info_plate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/car_info_brand_value"
                app:layout_constraintBottom_toBottomOf="@+id/car_info_logo"
                android:layout_marginStart="@dimen/text_space"
                android:textSize="@dimen/text_size" />

            <Button
                android:id="@+id/car_info_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_info_edit_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_info_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/car_info_edit_button"
                android:theme="@style/AppTheme.FlatButton" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/car_info_error_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/car_info_error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="@dimen/error_max_width"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/text_space"
                android:gravity="center"
                android:text="@string/no_car_error"/>

            <Button
                android:id="@+id/car_info_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_info_settings_button"
                android:contentDescription="@string/car_info_settings_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/car_info_error_text"
                android:theme="@style/AppTheme.FlatButton" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>